2022-11-30 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/cpp/gcc/gcc.cc,
	  support/cpp/gcc/opts.cc,
	  support/cpp/gcc/opts-common.cc,
	  support/cpp/gcc/opts-global.cc,
	  support/cpp/gcc/prefix.cc,
	  support/cpp/gcc/toplev.cc,
	  support/cpp/libcpp/lex.cc,
	  support/cpp/libcpp/mkdeps.cc,
	  support/cpp/gcc/c-family/c-opts.cc,
	  support/cpp/gcc/c-family/c-ppoutput.cc:
	  Possible fix for bug #3524

2022-11-29 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/cpp/gcc/system.h: don't try to check inodes when
	  compiled for Windows

2022-11-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/peep.c,
	  src/pdk/gen.c:
	  Pdk peephole infrastructure improvements, patch #446 by Konstantin Kim.

2022-11-28 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/scripts/sdcc.nsi: add cc1.exe
	* support/cpp/gcc/Makefile.in,
	  support/cpp/gcc/cc1_dummies.cc,
	  support/cpp/gcc/c/Make-lang.in,
	  support/cpp/gcc/c-family/c-common.h,
	  support/cpp/gcc/c-family/c-opts.cc: remove some unneeded
	  compile time executable requirement so cross compile with
	  mingw can succeed

2022-11-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/cpp/gcc/Makefile.in: add missing $(exeext)
	* support/cpp/gcc/gcc.cc,
	  support/cpp/gcc/opts.cc,
	  support/cpp/gcc/opts-common.cc,
	  support/cpp/gcc/prefix.cc,
	  support/cpp/gcc/toplev.cc,
	  support/cpp/libcpp/lex.cc,
	  support/cpp/libcpp/mkdeps.cc,
	  support/cpp/gcc/c-family/c-opts.cc,
	  support/cpp/gcc/c-family/c-ppoutput.cc: move iostream header
	  last to avoid inconsistent struct offsets and thus segfaults

2022-11-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCClabel.c (labelGotoGoto, labelUnreach),
	  src/SDCCBBlock.c (iCodeFromeBBlock),
	  src/SDCCicode.h: fix bug #3501

2022-11-23 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCC.lex: process #line directive in __asm__ blocks

2022-11-14 Benedikt Freisen <b.freisen AT gmx.net>
